# pasteflow

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: panel.html
config/: default.toml
src/: app.rs  config.rs  detect.rs  diff.rs  main.rs  rules.rs  transforms.rs
