[package]
name = "pasteflow"
version = "0.1.0"
edition = "2024"
description = "Rules-first paste transforms with mandatory preview and diff"
license = "MIT"
repository = "https://github.com/haasonsaas/pasteflow"
keywords = ["clipboard", "paste", "transform", "productivity"]
categories = ["development-tools"]

[dependencies]
arboard = "3.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5"
enigo = "0.1"
global-hotkey = "0.5"
image = "0.25"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.6"
thiserror = "1.0"
toml = "0.8"
tray-icon = "0.21"
wry = "0.43"
active-win-pos-rs = "0.8"
winit = "0.29"
